--- a/desktop/libs/libopenid/src/libopenid/templates/openid-login.html
+++ b/desktop/libs/libopenid/src/libopenid/templates/openid-login.html
@@ -16,6 +16,7 @@
   <link href="/static/desktop/ext/css/bootplus.css" rel="stylesheet">
   <link href="/static/desktop/ext/css/font-awesome.min.css" rel="stylesheet">
   <link href="/static/desktop/css/hue3.css" rel="stylesheet">
+  <link href="/static/desktop/css/hue3-extra.css" rel="stylesheet">
 
   <style type="text/css">
     body {
