--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -17,7 +17,9 @@
 */
 @import (reference) "cui/colors.less";
 @import (reference) "hue-attributes.less";
+
 @import "hue-assist.less";
+@import "hue-autocomplete.less";
 
 html {
   height: 100%;
