--- a/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
@@ -18,4 +18,6 @@
 
 @import (reference) "cui/colors.less";
 @import (reference) "hue-attributes.less";
+
 @import "hue-assist";
+@import "hue-autocomplete";
