--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -3473,3 +3473,15 @@ input[type='password']::-ms-reveal {
 .selectize-dropdown {
   z-index: 10000!important;
 }
+
+input:invalid,textarea:invalid,select:invalid {
+  color: #b94a48;
+  border-color: #ee5f5b
+}
+
+input:invalid:focus,textarea:invalid:focus,select:invalid:focus {
+  border-color: #e9322d;
+  -webkit-box-shadow: 0 0 6px #f8b9b7;
+  -moz-box-shadow: 0 0 6px #f8b9b7;
+  box-shadow: 0 0 6px #f8b9b7
+}
