HUE-5709 [core] Move the metastore styles to less
(cherry picked from commit 8010552443763bec48488a4b915f161bb415f03f)

--- a/apps/metastore/src/metastore/static/metastore/less/metastore.less
+++ b/apps/metastore/src/metastore/static/metastore/less/metastore.less
@@ -15,40 +15,50 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 */
+
+@import (reference) "cui/colors.less";
+@import (reference) "hue-attributes.less";
+
 .hueBreadcrumbBar {
   padding: 0;
 }
+
 .hueBreadcrumbBar li {
   padding: 12px;
 }
+
 .hueBreadcrumbBar li:first-child {
   padding-left: 0;
 }
+
 .hueBreadcrumbBar a {
-  color: #338BB8 !important;
+  color: @hue-primary-color-dark !important;
   display: inline !important;
 }
+
 .divider {
   color: #CCC;
 }
+
 .sidebar-nav {
   padding: 0;
 }
+
 .card-heading {
   padding-left: 6px !important;
   border-bottom: none !important;
 }
-.sampleTable td,
-.sampleTable th,
-.table-nowrap td,
-.table-nowrap th {
+
+.sampleTable td, .sampleTable th, .table-nowrap td, .table-nowrap th {
   white-space: nowrap;
 }
+
 h2.card-heading {
   border-bottom: 1px solid #e5e5e5!important;
   font-size: 12px!important;
   font-weight: bold!important;
 }
+
 .filter-box {
   float: left;
   margin-right: 10px;
@@ -56,33 +66,40 @@ h2.card-heading {
   padding: 4px;
   background-color: #F5F5F5;
 }
+
 .filter-box a.pull-right {
   margin: 4px;
 }
-.filter-box select,
-.filter-box input {
+
+.filter-box select, .filter-box input {
   margin-bottom: 0;
 }
+
 .add-filter {
   margin: 5px;
   float: left;
 }
+
 .checkbox.inline.pulled {
   margin-right: 10px;
   padding-top: 1px;
 }
+
 .checkbox.inline.pulled input {
   margin-left: 0;
   margin-right: 4px;
 }
+
 .metastore-main {
   padding: 20px;
   padding-top: 10px;
 }
+
 .metastore-main h3 {
   margin: 0;
   margin-bottom: 10px;
 }
+
 .empty-header-col,
 .metastore-main h4 {
   font-weight: bold;
@@ -93,31 +110,40 @@ h2.card-heading {
   border-bottom: 1px solid #DDD;
   padding-bottom: 3px;
 }
+
 .tile {
   margin-bottom: 20px;
   min-height: 124px;
 }
+
 .properties-table {
   width: 100%;
 }
+
 .properties-table td {
   padding-top: 5px;
 }
+
 .property-name {
   padding-left: 10px;
 }
+
 .empty-message {
   padding: 10px;
 }
+
 .editable-breadcrumbs {
   cursor: text;
 }
+
 .editable-breadcrumbs:hover {
   background-color: #F0F0F0;
 }
+
 .editable-breadcrumb-input {
   padding: 0!important;
 }
+
 .editable-breadcrumb-input input {
   font-size: 22.75px;
   height: 36px;
@@ -131,24 +157,30 @@ h2.card-heading {
   box-shadow: none;
   font-weight: 300;
 }
+
 .fileChooserBtn {
   height: 29px!important;
 }
+
 .acl-panel {
   border-left: 1px solid #e5e5e5;
   padding-top: 6px;
   padding-left: 12px;
 }
+
 .acl-panel .nav-tabs {
   margin-bottom: 0;
 }
+
 .acl-panel h4:not(:first-child) {
   margin-top: 20px;
 }
+
 .acl-panel-content {
   padding: 6px;
   overflow-y: scroll;
 }
+
 .acl-block-title {
   background-color: #eeeeee;
   font-weight: bold;
@@ -156,39 +188,48 @@ h2.card-heading {
   margin-top: 14px;
   margin-bottom: 4px;
 }
+
 .acl-block {
   background-color: #f6f6f6;
   padding: 3px;
   margin-bottom: 4px;
 }
-.acl-block .checkbox,
-.acl-block .radio {
+
+.acl-block .checkbox, .acl-block .radio {
   margin-left: 6px;
 }
+
 .acl-block-airy {
   padding: 6px;
 }
+
 .acl-block-airy input {
   margin-bottom: 0;
 }
+
 .acl-block-section {
   margin-top: 10px;
 }
+
 .acl-block-section input {
   margin-left: 14px;
 }
+
 .span6 .acl-block input[type='text'] {
   width: 25%;
 }
+
 .span6 .acl-block input[type='text'] {
   width: 21%;
 }
+
 .acl-actions {
   padding: 5px;
   text-align: center;
   color: #CCC;
   font-size: 20px;
 }
+
 .acl-actions span:hover {
   color: #999;
 }
