--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -987,6 +987,9 @@
   # A comma-separated list of white-listed Impala configuration properties that users are authorized to set.
   ## config_whitelist=debug_action,explain_level,mem_limit,optimize_partition_key_scans,query_timeout_s,request_pool
 
+  # Path to the impala configuration dir which has impalad_flags file
+  ## impala_conf_dir=${HUE_CONF_DIR}/impala-conf
+
   [[ssl]]
     # SSL communication enabled for this server.
     ## enabled=false
