--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook-layout.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook-layout.less
@@ -15,20 +15,23 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 */
+
 html {
   height: 100%;
 }
 body {
-  height: 100%;
+  height:100%;
   margin: 0;
   padding: 0;
   background-color: #FFF;
   overflow-y: hidden;
 }
+
 .vertical-full {
-  height: 100%;
+  height:100%;
   padding-right: 1px;
 }
+
 .main-content {
   height: auto;
   width: 100%;
@@ -37,19 +40,22 @@ body {
   bottom: 0;
   background-color: #FFF;
 }
+
 .panel-container {
   position: relative;
 }
+
 .left-panel {
   position: absolute;
   height: 100%;
   overflow: hidden;
   outline: none !important;
 }
+
 .context-panel {
   position: fixed;
   background: #fff;
-  height: calc(30%);
+  height: calc(100% - 70px);
   top: 70px;
   transition: all;
   -webkit-transition-duration: .3s;
@@ -59,25 +65,31 @@ body {
   padding: 10px 0;
   width: 420px;
   right: -440px;
-  box-shadow: 0 0 20px rgba(14, 18, 21, 0.38);
+  box-shadow: 0 0 20px rgba(14, 18, 21, .38);
   outline: none !important;
 }
+
 .context-panel.visible {
   right: 0;
 }
+
 .context-panel .nav-tabs {
   padding-left: 10px;
 }
+
 .context-panel .tab-content {
   padding: 12px;
-  min-height: calc(10%);
+  min-height: calc(100% - 90px);
 }
+
 .context-panel .tab-pane {
   height: 100%;
 }
+
 .content-panel {
   position: absolute;
   height: 100%;
   overflow: auto;
   outline: none !important;
 }
+
