--- a/desktop/core/src/desktop/static/desktop/css/hue.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue.css
@@ -1456,3 +1456,37 @@ a:visited {
 .ui-autocomplete {
   z-index: 3000 !important;
 }
+/* context panel */
+/* TODO: Positioning and clean-up */
+.context-panel {
+  position: fixed;
+  background: #FFFFFF;
+  height: calc(30%);
+  top: 113px;
+  z-index: 401;
+  overflow-y: auto;
+  padding: 10px 0;
+  width: 420px;
+  right: -440px;
+  outline: none !important;
+  -webkit-box-shadow: -2px 2px 8px rgba(0, 0, 0, 0.18);
+  -moz-box-shadow: -2px 2px 8px rgba(0, 0, 0, 0.18);
+  box-shadow: -2px 2px 6px 0 rgba(0, 0, 0, 0.18), -2px 2px 8px 0 rgba(0, 0, 0, 0.13);
+  -webkit-transition: right 0.2s ease;
+  -moz-transition: right 0.2s ease;
+  -ms-transition: right 0.2s ease;
+  transition: right 0.2s ease;
+}
+.context-panel.visible {
+  right: 0;
+}
+.context-panel .nav-tabs {
+  padding-left: 10px;
+}
+.context-panel .tab-content {
+  padding: 12px;
+  min-height: calc(10%);
+}
+.context-panel .tab-pane {
+  height: 100%;
+}
