--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -895,3 +895,37 @@ a:visited {
 .tooltip, .ui-autocomplete {
   z-index: 3000 !important;
 }
+
+/* context panel */
+/* TODO: Positioning and clean-up */
+.context-panel {
+  position: fixed;
+  background: @cui-white;
+  height: calc(30%);
+  top: 113px;
+  z-index: 401;
+  overflow-y: auto;
+  padding: 10px 0;
+  width: 420px;
+  right: -440px;
+  outline: none !important;
+  .hue-box-shadow(-2px, 2px);
+  .hue-ease-transition(right);
+}
+
+.context-panel.visible {
+  right: 0;
+}
+
+.context-panel .nav-tabs {
+  padding-left: 10px;
+}
+
+.context-panel .tab-content {
+  padding: 12px;
+  min-height: calc(10%);
+}
+
+.context-panel .tab-pane {
+  height: 100%;
+}
