HUE-5727 [assist] Add column popularity to the assist
(cherry picked from commit bc7eb250dc4486edbbdb1149d2f475e16cce04f5)

--- a/desktop/core/src/desktop/static/desktop/css/hue.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue.css
@@ -509,6 +509,10 @@ a {
 .popular-color {
   color: #EDB233;
 }
+.top-star {
+  vertical-align: text-top;
+  font-size: 70%;
+}
 /*
  Licensed to Cloudera, Inc. under one
  or more contributor license agreements.  See the NOTICE file
