HUE-5742 [core] Allow user to provide schema name for database via ini
(cherry picked from commit d717ee80fb2482e219110c2aacb1d24247a56a46)

--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -1340,6 +1340,8 @@
       # https://docs.djangoproject.com/en/1.4/ref/databases/
       ## options={}
 
+      # Database schema, to be used only when public schema is revoked in postgres
+      ## schema=
 
 ###########################################################################
 # Settings to configure SAML
