--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -73,8 +73,8 @@
   # Number of threads used by the CherryPy web server
   ## cherrypy_server_threads=40
 
-  # This property specifies the maximum size of the receive buffer in bytes in thrift sasl communication.
-  ## sasl_max_buffer=2*1024*1024  # 2MB
+  # This property specifies the maximum size of the receive buffer in bytes in thrift sasl communication (default 2 MB).
+  ## sasl_max_buffer=2 * 1024 * 1024
 
   # Filename of SSL Certificate
   ## ssl_certificate=
