HUE-5811 [assist] Align assist doc icon to the right

--- a/desktop/core/src/desktop/static/desktop/css/hue.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue.css
@@ -214,6 +214,7 @@
   padding-left: 12px;
   height: 40px;
   border-bottom: 1px solid #f1f1f1;
+  padding-right: 15px;
 }
 .assist-type-switch {
   display: inline-block;
