HUE-5834 [metastore] Show metastore links directly in responsive
This also fixes a couple of minor issues and adds an “Open in Metastore” link to the assist right-click context menu for tables.

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -578,7 +578,7 @@ a:visited {
 .hue-context-menu, .hue-popover-bottom {
   border-radius: @hue-panel-border-radius;
   background-color: @cui-white;
-  .hue-box-shadow-top;
+  .hue-box-shadow-bottom;
 }
 
 .hue-popover {
