--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -784,6 +784,16 @@
 
 
 ###########################################################################
+# Settings to configure your Analytics Dashboards
+###########################################################################
+
+[dashboard]
+
+  # Use latest Solr 5+ functionalities like Analytics Facets and Nested Documents (warning: still in beta).
+  ## support_latest_solr=false
+
+
+###########################################################################
 # Settings to configure your Hadoop cluster.
 ###########################################################################
 
@@ -1170,9 +1180,6 @@
 
   ## Query sent when no term is entered
   ## empty_query=*:*
-
-  # Use latest Solr 5.2+ features.
-  ## latest=false
 
 
 ###########################################################################
