--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -1344,7 +1344,7 @@
       ## options={}
 
       # Database schema, to be used only when public schema is revoked in postgres
-      ## schema=
+      ## schema=public
 
 ###########################################################################
 # Settings to configure SAML
