HUE-5742 [core] Set default schema to public
(cherry picked from commit 1c42cc0fddb185583167b725855fe492fca73daf)

--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -1375,7 +1375,7 @@
       ## options={}
 
       # Database schema, to be used only when public schema is revoked in postgres
-      ## schema=
+      ## schema=public
 
 ###########################################################################
 # Settings to configure SAML
