HUE-5853 [oozie] Fix margins for the workflow title and z-index of draggable widgets
(cherry picked from commit b82d52f2ebe2fffbcea9e65352f54c3b90152a5b)

--- a/apps/oozie/src/oozie/static/oozie/less/workflow-editor.less
+++ b/apps/oozie/src/oozie/static/oozie/less/workflow-editor.less
@@ -21,6 +21,7 @@
   .draggable-widget, .draggable-icon {
     cursor: move;
     background-color: #FFF;
+    z-index: 100;
   }
 
   #emptyDashboard {
