HUE-5686 [editor] Fix the Pig autocompletion of paths

--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -1256,3 +1256,23 @@ h4.header {
 .popover {
   z-index: 1030;
 }
+
+
+// TODO: Switch to the context popover css for the file chooser
+.ace-filechooser {
+  border-radius: @hue-panel-border-radius;
+  background-color: @cui-white;
+  .hue-box-shadow-bottom;
+}
+
+.ace-filechooser-content .filechooser-tree {
+  position: relative;
+  margin-right: 10px;
+}
+
+.ace-filechooser-close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  z-index: 1000;
+}
