HUE-5801 [assist] Move search styles to less
(cherry picked from commit 977ac6addf109ae6bb15653aacf75e3cfebe52e5)

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -589,3 +589,35 @@
   vertical-align: text-top;
   font-size: 70%;
 }
+
+.nav-autocomplete-item .ui-state-focus {
+  border: 1px solid @hue-primary-color-light;
+  background-color: @hue-primary-color-light !important;
+}
+
+.nav-autocomplete-item-link {
+  height: 44px;
+  overflow:hidden;
+
+  i {
+    font-size: 18px;
+    color: @hue-primary-color-dark;
+  }
+
+  > div {
+    vertical-align: top;
+    display:inline-block;
+  }
+}
+
+.nav-autocomplete-item-link em, .result-entry em {
+  font-style: normal;
+  font-weight: bold;
+}
+
+.nav-autocomplete-item-link
+
+.nav-autocomplete-divider {
+  height: 2px;
+  border-top: 1px solid #dddddd;
+}
