--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -929,3 +929,17 @@ a:visited {
 .context-panel .tab-pane {
   height: 100%;
 }
+
+#mini_jobbrowser {
+  overflow-y: auto;
+  max-height: 350px;
+  table, thead, tbody, th, td, tr {
+    display: block;
+  }
+  thead tr {
+    display: none;
+  }
+  input.search-query {
+    width: 70px;
+  }
+}
